--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
+*{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #a3c1c1;
+  margin: 0px;  
+  padding: 0px;
+  border-radius: 10px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: nowrap;
+  font-size: 1rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-logo{
+  width: 140px;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#headerNavBar{
+  width: 89%;
+  display: flex;
+  flex-direction: column;
+}
+
+#headerNavBar ul{
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+#headerNavBar li{
+  width: 15%;
+  margin: 5px 10px;
+  padding: 2px 10px;
+}
+
+#headerNavBar a{
+  text-decoration: none;
+  color: white;
+}
+
+@media only screen and (max-width: 768px){
+  .App-logo{
+    width: 20%;
   }
-  to {
-    transform: rotate(360deg);
+  #headerNavBar{
+    width: 80%;
+  }
+  #headerNavBar li{
+    width: 25%;
+    margin: 5px;
+  }
+}
+@media only screen and (max-width: 479px){
+  .App-header{
+    width: 100%;
+    display: block;
+  }
+  .App-logo{
+    width: 150px;
+  }
+  #headerNavBar{
+    width: 100%;
+  }
+  #headerNavBar ul{
+    text-align: center;
+    justify-content: center;
+    padding: 0%;
+    margin: 0px 0px 10px 0px;
+  }
+  #headerNavBar li{
+    width: 25%;
+    margin: 0px;
+    padding: 0px;
   }
 }
