--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,8 +1,11 @@
 .productos-container{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-row-gap: 20px;
     justify-items: center;
     align-items: center;
-    margin: 40px 0px;
+}
+.productos a {
+    color: rgb(59, 56, 56);
+    text-decoration: none;
 }
